--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="/assets/images/zakyLogo.png">
   <link href="/assets/scss/googleapisCss.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/animejs@3.0.1/lib/anime.min.js"></script>
-  <link rel="stylesheet"
-        href="https://s3-us-west-1.amazonaws.com/patterns.esri.com/files/calcite-web/1.0.2/css/calcite-web.min.css" />
+
   <script src="/assets/js/ckeditor.js"></script>
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
@@ -30,6 +28,9 @@
   };
 </script>
 <noscript>Please enable JavaScript to continue using this application.</noscript>
+<!--<script src="https://cdn.jsdelivr.net/npm/animejs@3.0.1/lib/anime.min.js"></script>-->
+<!--<link rel="stylesheet"-->
+<!--      href="https://s3-us-west-1.amazonaws.com/patterns.esri.com/files/calcite-web/1.0.2/css/calcite-web.min.css" />-->
 </body>
 
 </html>
